# infera

./: README.md  main.py  pyproject.toml
examples/: example.py
infera/: __init__.py  config.py  sampling.py
infera/core/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
infera/layers/: activation.py  attention.py  embed_head.py  layer_norm.py  linear.py  rotary_embedding.py  sampler.py
infera/utils/: context.py  loader.py
